Add compatibility REST rate limits
